--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                         <a href="#404" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
+                <a href="#e" class="nav-item nav-link text-capitalize  fw-bold dark-mode"><i class="fa-solid fa-circle-half-stroke fa-lg mx-2"></i>dark mode</a>
+
             </div>
         </div>
         <!-- landing -->
@@ -104,11 +106,11 @@
             </div>
         </div>
         <!-- about -->
-        <div class="about  container-fluid  px-lg-0 px-sm-0" id="about ">
+        <div class="about  container-fluid  px-lg-0 px-sm-0" id="about">
             <div class=" container about-container px-sm-0 ">
                 <div class="row">
                     <div class="col-lg-6 col-sm-12 text-center">
-                        <img src="css/img/about.jpg" alt="about.jpg" class="img-fluid h-75 ">
+                        <img src="css/img/about.jpg" alt="about.jpg" class="img-fluid  ">
                     </div>
                     <div class="col-lg-6 col-sm-12">
                         <div class="container about-d">
@@ -117,14 +119,14 @@
                                 doloribus voluptatum eligendi et officiis magni quidem perspiciatis illo eos maiores!
                             </p>
                             <div class="row">
-                                <div class="col p-3 box-count  shadow-sm">
+                                <div class=" col-sm-12 p-3 box-count  shadow-sm">
                                     <div class="d-flex align-items-center justify-content-between">
                                         <i class="fa-solid fa-check i-featuer"></i>
                                         <h2 class="fw-bold  count-num" data-target="1243">0</h2>
                                     </div>
                                     <h5 class="text-center fw-bold">Projects Done</h5>
                                 </div>
-                                <div class="col p-3 box-count shadow-sm">
+                                <div class=" col-sm-12 p-3 box-count shadow-sm">
                                     <div class="d-flex align-items-center justify-content-between">
                                         <i class="fa fa-users fa-2x i-featuer"></i>
                                         <h2 class="fw-bold  count-num" data-target="1190">0</h2>
@@ -305,8 +307,9 @@
         <div class="Projects py-5 position-relative" id="Projects">
             <h1 class="position-relative about-title text-capitalize fw-bolder rightdash text-center w-100">our projects
             </h1>
+
             <div class="position-relative d-flex justify-content-center g-4">
-                <div class="btn-group my-4 g-5 p-3">
+                <div class="btn-group my-4 g-5 p-3 project-btn">
                     <h4 class="btn btn-outline-dark text-capitalize tab-btn tab-btn-active d-flex align-items-center"
                         data-id="row-project">all
                     </h4>
