--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <button type="button" class="navbar-toggler me-4 d-sm-inline-block d-lg-none">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse justify-content-around">
-                <a href="#landing" class="nav-item nav-link text-capitalize  fw-bold">home</a>
-                <a href="#about" class="nav-item nav-link text-capitalize  fw-bold">about</a>
-                <a href="#service" class="nav-item nav-link text-capitalize  fw-bold">service</a>
-                <a href="#Projects" class="nav-item nav-link text-capitalize  fw-bold">projects</a>
-                <div class="nav-item dropdown position-relative">
+            <div class="navbar-collapse collapse justify-content-end ">
+                <a href="#landing" class="nav-item nav-link text-capitalize  fw-bold px-lg-4">home</a>
+                <a href="#about" class="nav-item nav-link text-capitalize  fw-bold px-lg-4">about</a>
+                <a href="#service" class="nav-item nav-link text-capitalize  fw-bold px-lg-4">service</a>
+                <a href="#Projects" class="nav-item nav-link text-capitalize  fw-bold px-lg-4">projects</a>
+                <div class="nav-item dropdown position-relative px-lg-4">
                     <a href="#" class="nav-link dropdown-toggle">Pages</a>
                     <div class="dropdown-menu fade-up position-absolute translate-middle-x">
                         <a href="#feature" class="dropdown-item">Feature</a>
@@ -39,7 +39,7 @@
                         <a href="#404" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
-                <a href="#e" class="nav-item nav-link text-capitalize  fw-bold dark-mode"><i class="fa-solid fa-circle-half-stroke fa-lg mx-2"></i>dark mode</a>
+                <a href="#e" class="nav-item nav-link text-capitalize  fw-bold dark-mode px-lg-4"><i class="fa-solid fa-circle-half-stroke fa-lg mx-2"></i>dark mode</a>
 
             </div>
         </div>
@@ -109,10 +109,10 @@
         <div class="about  container-fluid  px-lg-0 px-sm-0" id="about">
             <div class=" container about-container px-sm-0 ">
                 <div class="row">
-                    <div class="col-lg-6 col-sm-12 text-center">
+                    <div class="col-lg-6 col-sm-12 text-center ">
                         <img src="css/img/about.jpg" alt="about.jpg" class="img-fluid  ">
                     </div>
-                    <div class="col-lg-6 col-sm-12">
+                    <div class="col-lg-6 col-sm-12 counter text-center">
                         <div class="container about-d">
                             <h1 class="position-relative about-title text-capitalize fw-bolder rightdash ">about us</h1>
                             <p class="py-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
@@ -319,7 +319,7 @@
                         data-id="custoum">custoum Carpentry</h4>
                 </div>
             </div>
-            <div class="container project-container position-relative">
+            <div class="container project-container position-relative overflow-hidden">
                 <div class="row row-project" id="General">
                     <div class="col-lg-4 col-md-6 col-12  mt-4 General project-card ">
                         <div class="card p-2 overflow-hidden  ">
